--- a/_posts/2019-09-26-new-post.md
+++ b/_posts/2019-09-26-new-post.md
@@ -1,6 +1,7 @@
 ---
 title: All of the lights
 date: 2019-09-26 00:00:00 Z
+image: "/uploads/IMG_1180.PNG"
 excerpt: bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
   bla bla bla bla bla bla
 ---
